--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                        <span class="text">+44 770297092</span>
+                        <span class="text">Contact Form</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <span class="text">nathamoses99@email.com</span>
+                        <span class="text">security@shadowtactics.co.uk</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-                        <span class="text"><a href="C:\Users\natha\Desktop\New folder (2)\Home\Index.html">wwww.shadowtacticts.com</a></span>
+                        <span class="text"><a href="C:\Users\natha\Desktop\New folder (2)\Home\Index.html">wwww.shadowtactics.co.uk</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
