--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-                        <span class="text"><a href="C:\Users\natha\Desktop\New folder (2)\Home\Index.html">wwww.shadowtactics.co.uk</a></span>
+                        <span class="text"><a href="https://shadowtactics.co.uk/">wwww.shadowtactics.co.uk</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
