--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
             </div>
 
             <div class="contactInfo language">
-                <h3 class="title">Reference</h3>
+                <h3 class="title">Reference on request</h3>
                 <ul>
                     <li>
                      <span class="icon"><i class="fa fa-user-circle" aria-hidden="true"></i></span>   
-                     <span class="percent">Almighty Father</span>
+                     <span class="percent">on request</span>
                     </li>
                     <li>
                      <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                     <span class="percent">*7995798785</span>
+                     <span class="percent">on request</span>
                     </li>
                     <li>
                      <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                     <spanc class="percent">nathanmoses@hotmail.com</span>
+                     <spanc class="percent">on request</span>
                     </li>
                 </ul>
             </div>
