--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                        <span class="text">Contact Form</span>
+                        <span class="text"><a href="https://shadowtactics.co.uk/Contact%20Us/indexcontact.html">contact form</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
