--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <span class="text">security@shadowtactics.co.uk</span>
+                        <span class="text">Security@shadowtactics.co.uk</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-                        <span class="text"><a href="https://shadowtactics.co.uk/">wwww.shadowtactics.co.uk</a></span>
+                        <span class="text"><a href="https://shadowtactics.co.uk/">www.shadowtactics.co.uk</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                        <span class="text"><a href="https://www.linkedin.com/in/nathan-moses-252189136/?originalSubdomain=uk">wwww.linkedin.com</a></span>
+                        <span class="text"><a href="https://www.linkedin.com/in/nathan-moses-252189136/?originalSubdomain=uk">www.linkedin.com</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
@@ -125,26 +125,21 @@
         <div class="right_side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <p><strong>Motivated professional with passion and goal is to engineer and management of my skills that I acquired at my university 
-                    and at my past employers so I may develop further in a professional environment, I want to progress in a way to widen the 
-                    skill to set that it is transferrable across the industry.<br>
-                    <br>I am a dilligent and enthuasiastic client service officer with 12 years in the SIA security industry, in 
-                    health and safety customer-facing roles within personal protection, retail, hopitality infdustry, special events.
-                    <br>As experienced SIA officer I value high level in teamwork and exibit a warm and welcoming demeanour, making sure
-                    myself and the team is ready and capable to understand the clients needs with genuine enthusiasm in handling the 
-                    situations, highlighting the advantages of innovating high level of health and safety at the environment. <br>
-                    <br>I see myself as accomplished, highly experienced event manager with proven record of success in the administration, 
-                    logistical planning, and smooth delivery of security in diverse events in different environments.<br>Skilled in assessing 
-                    and understanding the unique needs of each envent, and ensuring that the requirements of all personal are effectively alligned
-                    and fulfilled, a calm and pragmatic negotiator capable of adapting to last minute changes.<br>
-                    <br>A qualified and registered level 3 First responce emergency care(FREC), First Aider with experience within the community 
-                    nursing, residential homes, providing a comprenhensive range of medical functions, and administering the correct treatment,
-                    with a passion for not only planning and providing treatment but also for the patient' health and wellbeing, by carefully 
-                    observing and assessing the medical needs.
-
-
-                </strong>
-                </p>
+                <p><strong>I see myself as a motivated professional whose passion and goals were to engineer and manage my skills so that I may acquire 
+                    it to support my clients and employers in the most efficient possible manner. I have been developing my skills further in a 
+                    professional mentality, I still want to acquire more skill, assets, and equipment so that it is transferrable across the security industry.<br>
+                    <br>I am a diligent and enthusiastic security official with 12 years in the SIA security industry, in health and safety customer-caring 
+                    roles within the personal protection, retail, hospitality industry, and special events. As experienced SIA officer I value high level in 
+                    teamwork and exhibit a warm and welcoming demeanor, making sure myself and the team is ready and capable to understand the client’s needs 
+                    with genuine enthusiasm in handling the situations, highlighting the advantages of innovating high level of health and safety at the 
+                    environment.<br>
+                    <br>I see myself as accomplished, highly experienced event manager with proven record of success in the administration, logistical planning, 
+                    and smooth delivery of security in diverse events in different environments.Skilled in assessing and understanding the unique needs of each 
+                    event, and ensuring that the requirements of all personal are effectively aligned and fulfilled, a calm and pragmatic negotiator capable of 
+                    adapting to last minute changes.<br>
+                    <br>A qualified and registered level 3 First response emergency care(FREC), First Aider with experience within the community nursing, residential 
+                    homes, providing a comprehensive range of medical functions, and administering the correct treatment, with a passion for not only planning and 
+                    providing treatment but also for the patient's health and wellbeing, by carefully observing and assessing the medical needs.</strong></p>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
