--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                         <h5>2023 - 2023</h5>
                         <h4>FREC Level 3</h4>        
                     </li>
+                    <li>
+                        <h5>2024 - 2024</h5>
+                        <h4>PMC Private Military Contractor</h4>
+                    </li>
                 </ul>
             </div>
 
@@ -225,6 +229,24 @@
             
             <div class="about skills">
                 <h2 class="title2">Professional Skills</h2>
+                <div class="box">
+                    <h4>CQC Close Quarter Combat</h4>
+                    <div class="percent">
+                        <div style="width: 75%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>CQB Close Quarter Battle</h4>
+                    <div class="percent">
+                        <div style="width: 70%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Firearms Trained</h4>
+                    <div class="percent">
+                        <div style="width: 80%;"></div>
+                    </div>
+                </div>
                 <div class="box">
                     <h4>First Aid Level L3</h4>
                     <div class="percent">
